<resources>
    <!-- App Name -->
    <string name="app_name">Football Legends</string>

    <!-- Navigation Titles -->
    <string name="Home">Home</string>
    <string name="Bio">Bio</string>
    <string name="Teams">Teams</string>
    <string name="Intro">Intro</string>
    <string name="Early_Life">Early Life</string>
    <string name="Family">Family</string>
    <string name="Awards">Awards</string>
    <string name="Profile">Profile</string>
    <string name="dhelms">dhelms2</string>
    <string name="dereck">dereck_helms@gmail.com</string>
    <string name="Leagues">Leagues</string>
    <string name="Leagues_details">MLS</string>
    <string name="Leagues_details2">UEFA Champions League</string>
    <string name="Leagues_question">Do you want to know a fact about European football leagues? If so, check me and click the above button!</string>
    <string name="Leagues_answer">The Premier League and the Champions League occur simultaneously, with the Premier League starting on August 12th and the Champions League starting on September 12th.</string>
    <string name="Contact">Contact</string>
    <string name="Settings">Settings</string>
    <string name="Trades">Trades</string>
    <string name="Account">Account</string>
    <string name="Gallery">Gallery</string>
    <string name="Recent">Recent</string>
    <string name="Favorites">Favorites</string>
    <string name="Archive">Archive</string>
    <string name="Bin">Bin</string>
    <string name="Content">Content</string>
    <string name="home">Home</string>
    <string name="tickets">Tickets</string>
    <string name="offers">Offers</string>
    <string name="rewards">Rewards</string>
    <string name="username">Username</string>
    <string name="favorite_teams">Leicester City</string>
    <string name="where_to">Where to?</string>
    <string name="seller">Everything football in one place</string>
    <string name="favorite_players">James Rodriguez</string>
    <string name="where_to2">Access your hub in the account or refer to the menus in the upper left or at the bottom of the screen.</string>
    <string name="settings_details">Be sure to check out our new map and create below and in the drawer menu!</string>
    <string name="settings_details2">Button to maps</string>
    <string name="settings_details3">Button to create</string>
    <string name="Manchester_City">Manchester City</string>
    <string name="Discarded">Trash</string>
    <string name="Archived">Archived</string>
    <string name="Leicester_City">Leicester City</string>
    <string name="nav_account">Navigate to account</string>
    <string name="Liverpool">Liverpool</string>
    <string name="News">News</string>
    <string name="news_2">BREAKING: Kylian Mbappe to leave PSG</string>
    <string name="News_details">BREAKING: Lionel Messi signs with Inter Miami CF and is coming to MLS!</string>
    <string name="News_question">Ilkay Guonduan has left Manchester City!</string>
    <string name="News_answer">Ilkay Guonduan has left Manchester City to join Bayern Munich on a free transfer.</string>
    <string name="Favorites1">Erling Haaland</string>
    <string name="best_goalkeepers">Pictures of the best goalkeepers</string>
    <string name="Favorites2">Paul Pogba</string>
    <string name="Favorites3">James Rodriguez</string>
    <string name="Favorites4">Lionel Messi</string>
    <string name="Favorites5">Cristiano Ronaldo</string>
    <string name="Favorites6">Kylian Mbappe</string>
    <string name="Home2">Access your hub in the account or refer to the menus in the upper left or top right of the screen.</string>

    <!-- Action Bar -->
    <string name="settings">Settings</string>
    <string name="archived_objects">Archived Objects</string>

    <!-- Strings that are related to functionality of the app -->
    <string name="reach_out">Is my app not working? Click the below links or contact us directly via any of the means provided</string>
    <string name="Hello">Hello $usernameForm!</string>
    <string name="settings2">Turn on high contrast mode</string>
    <string name="settings3">Turn on screen reader support</string>
    <string name="content">Content</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="tickets_fragment">Tickets Fragment</string>
    <string name="checkbox_create">Are you a professional player?</string>

    <string name="offers_fragment">Offers Fragment</string>
    <string name="rewards_fragment">Rewards Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="cart_fragment">Shopping Cart Fragment</string>
    <string name="content_fragment">Content Fragment</string>
    <string name="link_to_content_button">Link to Content Button</string>
    <string name="Submit">Submit</string>
    <string name="archive_explain">Objects not accessed in 30 days are moved here</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Header_text">Please enter your username and password below to login:</string>
    <string name="checkbox_text">Do you like Manchester City? Check me and click the above button!</string>
    <string name="checkbox_checked">Manchester City has won the treble! Rejoice!</string>
    <string name="header_text">Please enter your username and password below to login:</string>
    <string name="login_form_entry_error">Wrong username/password, please try again!</string>
    <string name="login_error">Either your username or password is not recognized! Please try again.</string>
    <string name="username_label">Enter your username:</string>
    <string name="password_label">Enter your password:</string>
    <string name="submit_button_text">LOGIN</string>
    <string name="back_button_text">GO BACK</string>
    <string name="under_construction_image">Hello, this ImageView is still under construction. Please check back soon.</string>
    <string name="under_construction_text">Hello, this TextView is still under construction. Please check back soon.</string>
    <string name="trash">Disliked items will go here</string>
    <string name="featured">Featured</string>
    <string name="help">Email:</string>
    <string name="help_details">dereckhelmsdev@gmail.com</string>
    <string name="favorites_info">Favorited items will go here.</string>
    <string name="archived_info">Archived items will go here.</string>
    <string name="bin_info">Deleted items will go here.</string>
    <string name="recent_info">Recent items will go here.</string>
    <string name="featured_info">Paul Pogba and James Rodriguez are your featured rising stars!</string>
    <string name="big_question">Do you want to know a fact about Erling Haaland?</string>
    <string name="Too_Bad">Erling Haalands nickname is the manchild.</string>
    <string name="Deleted_Account">Deleted Objects</string>
    <string name="Best_goalkeepers">Pictures of the best goalkeepers</string>
    <string name="Best_athletes">Pictures of the best athletes football has to offer.</string>
    <string name="Best_players">Pictures of the best players of football</string>
    <string name="Settings_Details">Please view your emulators screen rotate button to adjust the view. That is not supported here.</string>
    <string name="Bin_Details2">Disliked items or objects that are not removed from bin are moved here and deleted after 30 days.</string>
    <string name="Favorites_Description">Your liked items will go in here:</string>
    <string name="Navigate_Teams">Navigate to Teams</string>
    <string name="teams">Teams</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps_fragment">MapsFragment</string>
</resources>
