<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- Top group of menu items -->
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <!-- Teams item -->
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/baseline_sports_score_24"
            android:title="@string/teams" />

        <!-- Home item -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/Home" />



        <!-- Leagues item -->
        <item
            android:id="@+id/nav_leagues"
            android:icon="@drawable/baseline_whistle"
            android:title="@string/Leagues" />

        <!-- Favorites item -->
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorites"
            android:title="@string/Favorites" />

        <!-- Account item -->
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/Account" />

        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/baseline_browse_gallery_24"
            android:title="@string/featured" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/baseline_recent_actors_24"
            android:title="@string/Recent" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/baseline_map_24"
            android:title="Map" />
        <item
            android:id="@+id/nav_player_name"
            android:icon="@drawable/baseline_person_add_24"
            android:title="Create" />
    </group>

    <!-- Bottom group of menu items -->
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <!-- Archive item -->
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/archive"
            android:title="@string/Archive" />

        <!-- Bin item -->
        <item
            android:id="@+id/nav_bin"
            android:icon="@drawable/bin"
            android:title="@string/Bin" />

    </group>

</menu>

