<?xml version="1.0" encoding="utf-8"?>
<!-- handles login -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/page"
    tools:context=".MainActivity"
    android:background="@drawable/cool_white_background">

    <!-- Header TextView -->
    <TextView
        android:id="@+id/header"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/Header_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Please enter your username and password below to login:" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/user_name"
        style="@style/edit_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="Enter your username:" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password"
        style="@style/edit_text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        tools:text="Enter your password:" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/submit_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="476dp"
        android:text="@string/Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:text="SUBMIT" />

    <!-- FragmentContainerView for Navigation Component (commented out) -->
    <!-- <androidx.fragment.app.FragmentContainerView -->
    <!--     xmlns:android="http://schemas.android.com/apk/res/android" -->
</androidx.constraintlayout.widget.ConstraintLayout>